# LiarsDice

./: build.gradle  local.properties  settings.gradle
Assets/: dice.blend  dice.blend1  dice.dae  table.mtl
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/everhardsoft/liarsdice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/everhardsoft/liarsdice/: Application.java
app/src/main/res/anim/: in_slide_right.xml  in_slide_up.xml  out_slide_left.xml  out_slide_up.xml
app/src/main/res/drawable/: entry.xml
app/src/main/res/layout/: activity_multiplayerplay.xml  fragment_lan.xml  fragment_mainmenu.xml  fragment_settings.xml  row_lobby.xml  row_player.xml
app/src/main/res/raw/: dice_obj  table_dae.xml
app/src/main/res/values/: colors.xml  integer.xml  strings.xml  styles.xml
app/src/test/java/com/everhardsoft/liarsdice/: ExampleUnitTest.java
bullet/: build.gradle  proguard-rules.pro
bullet/bullet3-2.85.1/build3/Android/jni/: Application.mk
bullet/src/androidTest/java/com/everhardsoft/bullet/: ExampleInstrumentedTest.java
bullet/src/main/: AndroidManifest.xml
bullet/src/main/cpp/: CMakeLists.txt  CollisionShape.cpp  DynamicsWorld.cpp  RigidBody.cpp
bullet/src/main/java/com/everhardsoft/bullet/: BulletObject.java  DynamicsWorld.java  RigidBody.java  RigidBodyConstructionInfo.java  Transform.java
bullet/src/main/res/values/: strings.xml
diorama/: build.gradle
diorama/src/main/: AndroidManifest.xml
diorama/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+79 files in other folders)
